--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                  </div>
                 <!-- image -->
                  <div class="md:w-1/2 flex justify-center">
-                    <img src="/merobaby.jpg" class="max-w-full h-auto rounded-xl shadow-xl w-3/4  lg:w-3/4 float-right " alt="hero image" >
+                    <img src="/images/merobaby.jpg" class="max-w-full h-auto rounded-xl shadow-xl w-3/4  lg:w-3/4 float-right " alt="hero image" >
                  </div>
             </div>
            </div> 
@@ -136,7 +136,7 @@
               <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="/kawal.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="/images/kawal.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-2 right-2 bg-red-500 text-white rounded-full text-xs py-3 px-1  ">-20%</span>
 
@@ -164,7 +164,7 @@
               </div>
               <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="/cucumber.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="/images/cucumber.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-2 right-2 bg-red-500 text-white rounded-full text-xs py-3 px-1  ">-100%</span>
 
@@ -192,7 +192,7 @@
               </div>
               <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="/burger.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="/images/burger.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-2 right-2 bg-red-500 text-white rounded-full text-xs py-3 px-1  ">-30%</span>
 
@@ -220,7 +220,7 @@
               </div>
               <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="/chicekn momo.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="/images/chicekn momo.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-2 right-2 bg-red-500 text-white rounded-full text-xs py-3 px-1  ">-20%</span>
 
@@ -248,7 +248,7 @@
               </div>
               <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="/ramen.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="/images/ramen.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-2 right-2 bg-red-500 text-white rounded-full text-xs py-3 px-1  ">-20%</span>
 
@@ -276,7 +276,7 @@
               </div>
               <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="/sandwich.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="/images/sandwich.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-2 right-2 bg-red-500 text-white rounded-full text-xs py-3 px-1  ">-20%</span>
 
@@ -321,7 +321,7 @@
               <div class="grid grid-cols-1 md:grid-cols-2  gap-7 ">
                 <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="/kawal.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="/images/kawal.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-3 right-2 bg-red-500 text-white rounded-full text-xs py-1 px-3  ">Best eaten</span>
 
@@ -345,7 +345,7 @@
 
               <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="/cucumber.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="/images/cucumber.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-3 right-2 bg-red-500 text-white rounded-full text-xs py-1 px-3  "> eaten by force</span>
 
