--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 </div>
 
                 <div class="p-4">
-                    <h3 class="font-semibold text-xl">Chicken MoMo/h3>
+                    <h3 class="font-semibold text-xl">Chicken MoMo<git /h3>
                     <div class="text-yellow-500 text-xs py-2 ">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
