--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               </div>
               <div class="bg-white rounded-lg shadow-md">
                 <div class=" relative">
-                    <img src="images/chicekn-momo.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
+                    <img src="images/chicken-momo.jpg" alt="kawal" class=" w-full h-80 object-cover rounded-t-lg"/>
 
                     <span class="absolute top-2 right-2 bg-red-500 text-white rounded-full text-xs py-3 px-1  ">-20%</span>
 
@@ -228,7 +228,7 @@
                 </div>
 
                 <div class="p-4">
-                    <h3 class="font-semibold text-xl">Chicken MoMo<git /h3>
+                    <h3 class="font-semibold text-xl">Chicken MoMo</h3>
                     <div class="text-yellow-500 text-xs py-2 ">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
